Standardized all action types to message and value.
